fixed vertical alignment of play button

--- a/app/assets/stylesheets/maps.css.scss
+++ b/app/assets/stylesheets/maps.css.scss
@@ -126,18 +126,16 @@ label {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  display: inline-block;
+  display:  inline-flex;
   // transform: translate(0%, -318%);
   // transform: scale(2.0);
 }
 
-.play-overlay span {
+.play-overlay div {
   position: relative;
-  left: 40%;
-  display: inline;
-  line-height: 80px;
-  vertical-align: middle;
-  font-size: 60px;
+  left: 45%;
+  font-size: 80px;
+  margin: auto 0; 
 }
 
 .sidebar {
